[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialog_plugin/Editor/node_list/NodeList.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialog_plugin/Editor/node_list/NodeListPopUp.gd" type="Script" id=2]
[ext_resource path="res://addons/dialog_plugin/Editor/node_list/item/item.tscn" type="PackedScene" id=3]

[node name="NodeListPopUp" type="PopupPanel"]
margin_right = 269.0
margin_bottom = 218.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_right = 261.0
margin_bottom = 28.0

[node name="Title" type="Label" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 254.0
margin_bottom = 21.0
text = "Title"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 261.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 254.0
margin_bottom = 27.0

[node name="NewItemButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0
text = "New"

[node name="NodeList" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_bottom = 0.0
margin_top = 70.0
margin_bottom = 210.0
ItemScene = ExtResource( 3 )

[connection signal="popup_hide" from="." to="." method="_on_NodeListPopUp_popup_hide"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/NewItemButton" to="." method="_on_NewItemButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/NodeList" to="." method="_on_NodeList_item_selected"]
